--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Compressed CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <title>Spotify Preview</title>
 </head>
 <body>
+  <div class="row">
+    <div class="small-6 small-centered columns title">
+      <h1 class="spotify">Spotify Preview</h1>
+      <input type="text" name="song" id="search-music">
+    </div>
+  </div>
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/app.js"type="text/javascript">
 
