--- a/index.html
+++ b/index.html
@@ -12,17 +12,43 @@
 </head>
 <body>
   <div class="row">
-    <div class="small-6 small-centered columns title">
+    <div class="medium-5 medium-centered columns title">
       <h1 class="spotify">Spotify Preview</h1>
       <input type="text" name="song" id="search-music">
+
+      <div class="view"></div>
     </div>
   </div>
 
+  <script id="tracks-template" type="text/x-handlebars-template">
+    {{#if items}}
+      {{#each items}}
+      <div class="row">
+        <div class="medium-10 columns">
+          <div class="row">
+            <div class="medium-5 columns">
+
+            <img src="{{this.album.images.0.url}}" alt="thumb" class="image">
+            </div>
+            <div class="medium-7 columns">
+              <p>{{this.name}}</p>
+
+              <p>{{this.artists.0.name}}</p>
+              <audio controls><source src="{{this.preview_url}}" type="audio/mpeg"></audio>
+
+          </div>
+          </div>
+        </div>
+      </div>
+    {{/each}}
+  {{else}}
+    <p> No se encontraron resultados</p>
+  {{/if}}
+  </script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="js/app.js"type="text/javascript">
-
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.min.js"></script>
+  <script src="js/app.js"type="text/javascript"> </script>
   <!-- Compressed JavaScript -->
   <script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
 </body>
